--- a/DiplomAL1/view/login.html
+++ b/DiplomAL1/view/login.html
@@ -8,7 +8,7 @@
 </head>
 <body>
 	<div class="wrapper">
-    	<form class="form-signin" action="../Controller/ControllerAdmin.php" method="POST">       
+    	<form class="form-signin" action="../index.php" method="POST">       
       		<h2 class="form-signin-heading">Авторизуйтесь</h2>
       		<input type="text" class="form-control" name="username" placeholder="Логин" required="" autofocus="" />
       		<input type="password" class="form-control" name="password" placeholder="Пароль" required=""/>
